--- a/Jabiss.Web/Views/Categories/Index.cshtml
+++ b/Jabiss.Web/Views/Categories/Index.cshtml
@@ -2,7 +2,7 @@
 @model CategoryViewModel
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h4 class="mb-3">Categories</h4>
