--- a/Jabiss.Web/Views/Products/Create.cshtml
+++ b/Jabiss.Web/Views/Products/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create Product";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h2>Create Product</h2>
