--- a/Jabiss.Web/Views/Categories/Create.cshtml
+++ b/Jabiss.Web/Views/Categories/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Create Category";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h2>Create Category</h2>
