--- a/Jabiss.Web/Views/Categories/Edit.cshtml
+++ b/Jabiss.Web/Views/Categories/Edit.cshtml
@@ -2,7 +2,7 @@
 @model EditCategoryViewModel
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h4>Edit Category</h4>
