--- a/Jabiss.Web/Views/Products/Edit.cshtml
+++ b/Jabiss.Web/Views/Products/Edit.cshtml
@@ -2,7 +2,7 @@
 @model EditProductViewModel
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h4>Edit Product</h4>
