--- a/Jabiss.Web/Views/Products/Index.cshtml
+++ b/Jabiss.Web/Views/Products/Index.cshtml
@@ -2,7 +2,7 @@
 @model ProductViewModel
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminPanelLayout.cshtml";
 }
 
 <h4 class="mb-3">Products</h4>
